--- a/index.html
+++ b/index.html
@@ -2,41 +2,45 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name=" viewport" content=" width=divice-width, initial-scale=1.0">
+    <meta name="viewport" content=" width=divice-width, initial-scale=1.0">
     <title> NOSSO PROJETO</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
-
-
-
 <body>
 <section class=" conteudo-principal">
 <h2 class="titulo-principal">Titulo principal</h2>
+
 <div class="conteudo">
- </div class="botoes">
-<button class="botao ativo"> Aba 1</button>
+ <div class="botoes">
+<button class="botao ativo"> Passar no vestibular</button>
 <button class="botao"> Aba 2</button>
 <button class="botao"> Aba 3</button>
 <button class="botao"> Aba 4</button>
 </div>
 
 <div class=" abas-textos">
+
 <div class=" aba-conteudo ativo">
 <h3 class=" aba-conteudo-titulo-principal"> Titulo da aba 1</h3>
-<div class=" contador"></div>
-</div>
-<div class=" aba-conteudo">
-    <h3 class=" aba-conteudo-titulo-principal"> Titulo da aba 2</h3>
-    <div class=" contador"></div>
-</div>
-<div class=" aba-conteudo">
-<h3 class=" aba-conteudo-titulo-principal"> Titulo da aba 3</h3>
 <div class="contador"></div>
 </div>
-<div class=" aba-conteudo">
+
+<div class="aba-conteudo">
+    <h3 class="aba-conteudo-titulo-principal"> Titulo da aba 2</h3>
+    <div class="contador"></div>
+</div>
+
+<div class="aba-conteudo">
+<h3 class="aba-conteudo-titulo-principal"> Titulo da aba 3</h3>
+<div class="contador"></div>
+</div>
+
+<div class="aba-conteudo">
 <h3 class="aba-conteudo-titulo-principal">Titulo aba 4</h3>
-  </div>
+<div class="contador"></div>
+</div>
+
 </div>
 </div>
   </section>
