--- a/index.html
+++ b/index.html
@@ -9,35 +9,36 @@
 
 <body>
 <section class=" conteudo-principal">
-<h2 class="titulo-principal">Titulo principal</h2>
+<h2 class="titulo-principal">NOSSOS OBJETIVOS</h2>
 
 <div class="conteudo">
  <div class="botoes">
-<button class="botao ativo"> Passar no vestibular</button>
-<button class="botao"> Aba 2</button>
-<button class="botao"> Aba 3</button>
-<button class="botao"> Aba 4</button>
+<button class="botao ativo"> Passar na Faculdade </button>
+<button class="botao"> Cursar Estética</button>
+<button class="botao"> Ter CNH</button>
+<button class="botao"> Me Tornar Independente</button>
 </div>
 
 <div class=" abas-textos">
 
 <div class=" aba-conteudo ativo">
-<h3 class=" aba-conteudo-titulo-principal"> Titulo da aba 1</h3>
+<h3 class=" aba-conteudo-titulo-principal"> Para passar na faculdade, preciso me dedicar e estudar muito.</h3>
 <div class="contador"></div>
 </div>
 
 <div class="aba-conteudo">
-    <h3 class="aba-conteudo-titulo-principal"> Titulo da aba 2</h3>
+    <h3 class="aba-conteudo-titulo-principal"> Preciso conseguir um bom emprego, para cursar estética.</h3>
     <div class="contador"></div>
 </div>
 
 <div class="aba-conteudo">
-<h3 class="aba-conteudo-titulo-principal"> Titulo da aba 3</h3>
+<h3 class="aba-conteudo-titulo-principal"> Preciso ter no mínimo 18 anos e me dedicar as aulas.
+</h3>
 <div class="contador"></div>
 </div>
 
 <div class="aba-conteudo">
-<h3 class="aba-conteudo-titulo-principal">Titulo aba 4</h3>
+<h3 class="aba-conteudo-titulo-principal"> Ter 18 anos, conseguir um emprego, tirar minha carteira de habilitação e fazer alguma faculdade.</h3>
 <div class="contador"></div>
 </div>
 
