--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
 <div class="conteudo">
  <div class="botoes">
-<button class="botao ativo"> Passar na Faculdade </button>
-<button class="botao"> Cursar Estética</button>
-<button class="botao"> Ter CNH</button>
-<button class="botao"> Me Tornar Independente</button>
+<button class="botao ativo"> Objetivo da Rafaela:  Passar na Faculdade </button>
+<button class="botao"> Objetivo da Erika:  Cursar Estética</button>
+<button class="botao"> Objetivo da Jéssica:  Ter CNH</button>
+<button class="botao"> Objetivo da Pamela:   Me Tornar Independente</button>
 </div>
 
 <div class=" abas-textos">
